--- a/TestProjectMVC/Views/_ViewImports.cshtml
+++ b/TestProjectMVC/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using TestProjectMVC
-@using TestProjectMVC.Models
+@using TestProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
